# android-hostai

./: .gitignore  .gitmodules.example  API_USAGE.md  ARCHITECTURE.md  CONCURRENT_REQUESTS.md  CONTRIBUTING.md  FUNCTION_CALLING_EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FIX.md  INTEGRATION_GUIDE.md  LLAMA_CPP_INTEGRATION_COMPLETE.md  README.md  TESTING_TOOL_FIX.md  TOOL_ERROR_FIX_SUMMARY.md  add_llama_cpp.sh  build.gradle.kts  build.sh  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  README.md  llama_jni.cpp
app/src/main/java/com/wannaphong/hostai/: ApiServerService.kt  LicensesActivity.kt  LlamaModel.kt  LogManager.kt  LogViewerActivity.kt  MainActivity.kt  ModelManagementActivity.kt  ModelManager.kt  OpenAIApiServer.kt  RequestLogger.kt  SettingsActivity.kt  SettingsManager.kt  StoredCompletionsActivity.kt  ToolModels.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_licenses.xml  activity_log_viewer.xml  activity_main.xml  activity_model_management.xml  activity_settings.xml  activity_stored_completions.xml  item_model.xml  item_stored_completion.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
